fixing weird background resizing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -390,9 +390,20 @@ input:-webkit-autofill {
 }
 
 @media (max-width: 800px) {
-  #bg-image {
+  html {
+      background: url("assets/showgo_header.jpg") no-repeat center center fixed;
+      background-size: cover;
+      height: 100%;
+      overflow: hidden;
+  }
+
+  body {
     height: 100%;
-    width: initial;
+    overflow: scroll;
+  }
+
+  #bg-image {
+    display: none;
   }
 
   .email {
